Try to fix table font size on mobile

--- a/main.css
+++ b/main.css
@@ -70,13 +70,9 @@ h3 {
   font-family: 'Karla', sans-serif;
 }
 
-p, th, tr {
-  font-size: 1em;
-  font-family: 'Karla', sans-serif;
-}
-
 p {
   margin-top: 0.4em;
+  font-family: 'Karla', sans-serif;
 }
 
 h2, h3 {
@@ -186,12 +182,14 @@ div#main-content {
 
 /* Curriculum Vitae table */
 div#main-content td {
+  font-size: 1em;
   font-family: 'Karla', sans-serif;
   padding-left: 1em;
   vertical-align: top;
 }
 
 div#main-content th {
+  font-size: 1em;
   font-family: 'Abhaya Libre', serif;
   font-size: larger;
   text-align: right;
